🔫 Add Linear transformation for movement of projectile

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Balloon game</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
-<canvas id="gameCanvas"></canvas>
-<script src="script.js"></script>
-</body>
+    <head>
+        <title>Balloon game</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    <body>
+        <canvas id="gameCanvas"></canvas>
+        <script src="script.js"></script>
+    </body>
 </html>
