Add logic for balloon touch end wall

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <canvas id="gameCanvas"></canvas>
         <script src="script.js"></script>
+        <script src="entityService.js"></script>
     </body>
 </html>
