Edit Health bar logic

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     </head>
     <body>
         <canvas id="gameCanvas"></canvas>
-        <script src="script.js"></script>
-        <script src="entityService.js"></script>
+        <script type="module" src="script.js"></script>
+        <img id="castle" src="/img/castle1.jpg" alt="obr" style="display: none;">
+<!--        <script src="healthService.js"></script>-->
+        <!--        <script src="entityService.js"></script>-->
     </body>
 </html>
