--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <canvas id="gameCanvas"></canvas>
+        <canvas id="shopCanvas"></canvas>
         <script type="module" src="scripts/script.js"></script>
         <img id="castle" src="/img/castle1.jpg" alt="obr" style="display: none;">
     </body>
