--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-<!--        <canvas id="shopCanvas"></canvas>-->
-
         <canvas id="gameCanvas"></canvas>
         <script type="module" src="scripts/script.js"></script>
-        <img id="castle" src="/img/castle1.jpg" alt="obr" style="display: none;">
+<!--        <img id="castle" src="/img/castle1.jpg" alt="obr" style="display: none;">-->
     </body>
 </html>
