--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     </head>
     <body>
         <canvas id="gameCanvas"></canvas>
-        <script type="module" src="scripts/script.js"></script>
+        <button id="nextWaveButton">Start Next Wave</button>
 <!--        <img id="castle" src="/img/castle1.jpg" alt="obr" style="display: none;">-->
+        <script type="module" src="scripts/script.js"></script>
     </body>
 </html>
