Edit color and fonts in css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <script type="module" src="scripts/script.js"></script>
         </div>
         <div id="menu">
-            <h1>Vítejte ve hře</h1>
+            <h1>Welcome to the Game</h1>
             <button id="startButton">Start</button>
         </div>
     </body>
