--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Balloon game</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link href="https://fonts.cdnfonts.com/css/games" rel="stylesheet">
     </head>
     <body>
         <div id="theGame">
@@ -12,6 +13,7 @@
         </div>
         <div id="menu">
             <h1>Welcome to the Game</h1>
+            <h2>Tower Defense</h2>
             <button id="startButton">Start</button>
         </div>
     </body>
